--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ dwains-dashboard copy/
 /custom_components/dwains_dashboard/js/webpack.config.js.forts
 /custom_components/dwains_dashboard/js/webpack.config.js.old
 /custom_components/dwains_dashboard/js/ts_src
+/custom_components/dwains_dashboard/js/tsconfig.json
